[gd_scene load_steps=37 format=3 uid="uid://jcflgwwwn1le"]

[ext_resource type="Shader" path="res://levels/toon.gdshader" id="2_esjey"]
[ext_resource type="PackedScene" uid="uid://p0nwwoiajish" path="res://player.tscn" id="3_a1jpg"]
[ext_resource type="Script" path="res://BossSpawner.gd" id="5_wltol"]
[ext_resource type="Script" path="res://environment/environment.gd" id="6_uxbw1"]
[ext_resource type="Shader" path="res://levels/floor.gdshader" id="7_osvsr"]
[ext_resource type="Script" path="res://xp_spawner.gd" id="8_fru4h"]
[ext_resource type="Shader" path="res://levels/sepia.gdshader" id="9_1bl6e"]
[ext_resource type="PackedScene" uid="uid://5vtvxlilkwxa" path="res://xp.tscn" id="9_fc4s0"]
[ext_resource type="Script" path="res://SignalBus.gd" id="10_br0rc"]
[ext_resource type="Shader" path="res://levels/palette.gdshader" id="10_f2p3c"]
[ext_resource type="Script" path="res://damage_notifier.gd" id="11_dxmhe"]
[ext_resource type="PackedScene" uid="uid://c1j0q4pbd3wsu" path="res://damage_popup.tscn" id="12_25npy"]
[ext_resource type="Script" path="res://UI.gd" id="13_g35wm"]
[ext_resource type="Script" path="res://resources/powerups/powerup.gd" id="14_k3ow0"]
[ext_resource type="PackedScene" uid="uid://becxdpu3rdald" path="res://upgrade_select.tscn" id="14_pnbqn"]
[ext_resource type="Resource" uid="uid://bcg8h5axbiqw" path="res://resources/powerups/move_speed.tres" id="15_vape6"]
[ext_resource type="Resource" uid="uid://dmticccf3b4mu" path="res://resources/powerups/attack_range.tres" id="16_cw718"]
[ext_resource type="Resource" uid="uid://b8dxnhsqnei88" path="res://resources/powerups/damage.tres" id="17_i5pqr"]
[ext_resource type="Resource" uid="uid://drec0q66v6eb7" path="res://resources/powerups/pickup_radius.tres" id="18_i66uc"]
[ext_resource type="Resource" uid="uid://c72rljnbf3742" path="res://resources/powerups/health_regen.tres" id="19_4se33"]
[ext_resource type="Resource" uid="uid://ceciyiosn6j4w" path="res://resources/powerups/vampirism.tres" id="20_rs20a"]
[ext_resource type="Resource" uid="uid://b7ro1mtduu8t1" path="res://resources/powerups/attack_speed.tres" id="21_v5w6i"]
[ext_resource type="Script" path="res://game_over.gd" id="22_v8ttl"]
[ext_resource type="Texture2D" uid="uid://cyqf2lb5ojevj" path="res://assets/ded.png" id="23_5n4ej"]
[ext_resource type="Script" path="res://levels/debug.gd" id="24_cmu5b"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ltofi"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tk6ea"]
sky_material = SubResource("ProceduralSkyMaterial_ltofi")

[sub_resource type="Environment" id="Environment_73ap4"]
background_mode = 2
sky = SubResource("Sky_tk6ea")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hjp10"]
render_priority = 0
shader = ExtResource("2_esjey")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_obw3w"]
material = SubResource("ShaderMaterial_hjp10")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u7up7"]
render_priority = 0
shader = ExtResource("7_osvsr")
shader_parameter/world_uv = false
shader_parameter/object_uv = false
shader_parameter/object_uv_scale = Vector2(1, 1)
shader_parameter/preset_color = 0
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/metalic = 0.25
shader_parameter/roughness = 0.75
shader_parameter/grid_scale = 1.0
shader_parameter/grid_width = 0.01
shader_parameter/grid_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/inside_scale = 1.0
shader_parameter/inside_width = 0.01
shader_parameter/inside_color = Color(0.8, 0.8, 0.8, 0.8)
shader_parameter/checkered = true
shader_parameter/sub_checkered_grid = false
shader_parameter/checkered_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/checkered_blend_color = 0.1
shader_parameter/use_inside_uv = false
shader_parameter/use_albedo_color = false
shader_parameter/albedo_alpha = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_aeau0"]
material = SubResource("ShaderMaterial_u7up7")
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v6tgy"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w3fbo"]
shader = ExtResource("9_1bl6e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_li8hs"]
shader = ExtResource("10_f2p3c")
shader_parameter/palette = PackedColorArray(0, 0, 0, 1, 0, 0.470588, 0, 1, 0, 0.894118, 0, 1, 0.670588, 1, 0, 1, 0.984314, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_riw0p"]
bg_color = Color(0.0470588, 0.6, 0.839216, 1)

[node name="Arena" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_73ap4")

[node name="Player" parent="." instance=ExtResource("3_a1jpg")]

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.565, 0)
remote_path = NodePath("../../Minimap/SubViewportContainer/SubViewport/Camera3D")
update_rotation = false
update_scale = false

[node name="MainCamera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20)
cull_mask = 1048573
doppler_tracking = 2
fov = 37.8493

[node name="PostProcess" type="MeshInstance3D" parent="Player/MainCamera"]
mesh = SubResource("QuadMesh_obw3w")

[node name="EnemyParent" type="Node3D" parent="."]

[node name="BossSpawner" type="Node3D" parent="." node_paths=PackedStringArray("signal_bus", "spawn_near_target", "spawn_parent", "player")]
script = ExtResource("5_wltol")
signal_bus = NodePath("../SignalBus")
spawn_near_target = NodePath("../Player")
spawn_parent = NodePath("../EnemyParent")
player = NodePath("../Player")

[node name="XpSpawner" type="Node3D" parent="."]
script = ExtResource("8_fru4h")
xp = ExtResource("9_fc4s0")

[node name="Environment" type="Node" parent="."]
script = ExtResource("6_uxbw1")

[node name="Floor" type="StaticBody3D" parent="Environment"]
collision_layer = 0
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
layers = 3
mesh = SubResource("PlaneMesh_aeau0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("ConcavePolygonShape3D_v6tgy")

[node name="SignalBus" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_br0rc")

[node name="DamageNotifier" type="Node3D" parent="."]
script = ExtResource("11_dxmhe")
damage_popup = ExtResource("12_25npy")

[node name="Sepia" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Sepia"]
material = SubResource("ShaderMaterial_w3fbo")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="BlackAndWhite" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="BlackAndWhite"]
material = SubResource("ShaderMaterial_li8hs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Palette" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Palette"]
material = SubResource("ShaderMaterial_li8hs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_enabled = true
script = ExtResource("13_g35wm")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_right = 57.0
offset_bottom = 104.0

[node name="Kills" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Kills: 0"

[node name="Stats" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Xp" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Progress" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="UI/Progress"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.0470588, 0.6, 0.839216, 1)

[node name="Level" type="Label" parent="UI/Progress/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1
"

[node name="XpBar" type="ProgressBar" parent="UI/Progress"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_riw0p")
show_percentage = false

[node name="UpgradeSelect" parent="UI" instance=ExtResource("14_pnbqn")]
visible = false
offset_right = -0.00012207
choices = Array[ExtResource("14_k3ow0")]([ExtResource("15_vape6"), ExtResource("16_cw718"), ExtResource("17_i5pqr"), ExtResource("18_i66uc"), ExtResource("19_4se33"), ExtResource("20_rs20a"), ExtResource("21_v5w6i")])

[node name="GameOver" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.866667)
script = ExtResource("22_v8ttl")

[node name="ded" type="TextureRect" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_5n4ej")

[node name="Button" type="Button" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -191.0
offset_right = 185.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart Game"

[node name="Minimap" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Minimap"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 256.0
grow_horizontal = 0

[node name="SubViewport" type="SubViewport" parent="Minimap/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Minimap/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.565, 0)
cull_mask = 2
projection = 1
fov = 37.8493
size = 40.0

[node name="Debug" type="Node3D" parent="." node_paths=PackedStringArray("player", "xpSpawner")]
script = ExtResource("24_cmu5b")
player = NodePath("../Player")
xpSpawner = NodePath("../XpSpawner")

[connection signal="deal_damage" from="Player" to="DamageNotifier" method="_on_player_deal_damage"]
[connection signal="death" from="Player" to="UI/GameOver" method="_on_player_death"]
[connection signal="level_up" from="Player" to="UI" method="_on_player_level_up"]
[connection signal="level_up" from="Player" to="UI/UpgradeSelect" method="_on_player_level_up"]
[connection signal="damage_dealt" from="SignalBus" to="DamageNotifier" method="_on_signal_bus_damage_dealt"]
[connection signal="enemy_died" from="SignalBus" to="XpSpawner" method="_on_signal_bus_enemy_died"]
[connection signal="enemy_died" from="SignalBus" to="SignalBus" method="_on_enemy_died"]
[connection signal="enemy_spawned" from="SignalBus" to="SignalBus" method="_on_enemy_spawned"]
[connection signal="pause_game" from="SignalBus" to="SignalBus" method="_on_pause_game"]
[connection signal="unpause_game" from="SignalBus" to="SignalBus" method="_on_unpause_game"]
[connection signal="pressed" from="UI/GameOver/Button" to="UI/GameOver" method="_on_button_pressed"]
